<resources>
<string name="app_name">Ex1New</string>
<string name="intro">This activity demonstrates the use of Relative Layout with two internal Linear layouts.</string>

<string name="name">Your name:</string>

<string name="name_buttom">Press me!</string>

<string name="choose1">Option1</string>

<string name="choose2">Option2</string>

<string name="choose3">Option3</string>

<string name="radio">Alternative1</string>

<string name="radio2">Alternative2</string>

<string name="cell1">cell1</string>

<string name="cell2">cell2</string>

<string name="cell3">cell3</string>

<string name="cell4">cell4</string>

<string name="cell5">cell5</string>

<string name="cell6">cell6</string>

<string name="cell7">cell7</string>

<string name="cell8">cell8</string>

<string name="cell9">cell9</string>

<string name="intro3">This activity demonstrates the use of the Table Layout with Spanning columns</string>
    </resources>